# reddit-media-scraper

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
data/: subreddits.csv  usersubmissions.csv
docs/: README.md
frontend/: index.html
src/: __init__.py  config.py  main.py  py.typed
src/utils/: file_operations.py  media_download.py  media_parsing.py  reddit_auth.py  subreddit_processor.py  usersubmissions_processor.py
tests/: test_main.py
